# plotter2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  buildplan.txt  example_bundle.dot  plotter2.txt  pyplot2.sh
pyimpl/: __main__.py  plotter2.md
src/executable/child/src/: CMakeLists.txt  main.cpp
src/executable/child/src/include/: listener.hpp  worker.hpp
src/executable/child/src/sources/: listener.cpp  main.cpp  worker.cpp
src/executable/main/exe/: CMakeLists.txt  exe.cpp
src/executable/main/exesrcs/: CMakeLists.txt  main.cpp
src/executable/main/src/: CMakeLists.txt
src/executable/main/src/include/: event.hpp  main_datter.hpp  orchestration.hpp  proccess.hpp  process.hpp  runtime.hpp
src/executable/main/src/sources/: event.cpp  main.cpp  orchestration.cpp  process.cpp  runtime.cpp
src/executable/main/tests/: CMakeLists.txt
src/executable/main/tests/include/: runtime_tests.hpp  testscommons.hpp
src/executable/main/tests/sources/: runtime_tests.cpp  start_test.cpp  tests.cpp  testscommons.cpp
src/libs/messenger/parent/: CMakeLists.txt
src/libs/messenger/parent/include/: childholder.hpp  parent.hpp
src/libs/messenger/parent/sources/: childholder.cpp  parent.cpp
src/libs/messenger/shared/: CMakeLists.txt
src/libs/messenger/shared/include/: message.hpp  messager_commons.hpp  socketer.hpp
src/libs/messenger/shared/sources/: message.cpp  messager_commons.cpp  socketer.cpp
src/libs/plotter2/: CMakeLists.txt
src/libs/plotter2/datter/: CMakeLists.txt
src/libs/plotter2/datter/lib/: CMakeLists.txt
src/libs/plotter2/datter/lib/core/: CMakeLists.txt
src/libs/plotter2/datter/lib/core/dataframe/: CMakeLists.txt
src/libs/plotter2/datter/lib/core/dataframe/include/: dataframe.hpp  dataitem.hpp
src/libs/plotter2/datter/lib/core/dataframe/sources/: dataframe.cpp
src/libs/plotter2/datter/lib/core/datasrc/: CMakeLists.txt
src/libs/plotter2/datter/lib/core/datasrc/include/: datasrc.hpp  datasrc_csv.hpp  datasrc_json.hpp
src/libs/plotter2/datter/lib/core/datasrc/sources/: datasrc.cpp  datasrc_csv.cpp  datasrc_json.cpp
src/libs/plotter2/datter/lib/core/datatypes/: CMakeLists.txt
src/libs/plotter2/datter/lib/core/datatypes/include/: dataholder.hpp
src/libs/plotter2/datter/lib/core/datatypes/sources/: dataholder.cpp
src/libs/plotter2/datter/lib/core/include/: datter.hpp
src/libs/plotter2/datter/lib/include/: dataholder.hpp  datasrc.hpp  datasrc_json.hpp  datter.hpp
src/libs/plotter2/datter/lib/include/dataholders/: dataholder_map.hpp  dataholder_string.hpp
src/libs/plotter2/datter/lib/models/: CMakeLists.txt
src/libs/plotter2/datter/lib/models/bundles/include/: bundle.hpp  bundle_container.hpp  bundle_element.hpp  bundle_node.hpp  bundle_shared.hpp
src/libs/plotter2/datter/lib/pipeline/lib/: CMakeLists.txt
src/libs/plotter2/datter/lib/sources/: datasrc.cpp  datasrc_csv.cpp  datter.cpp
src/libs/plotter2/datter/lib/sources/dataholders/: dataholder_array.cpp  dataholder_number.cpp
src/libs/plotter2/datter/lib/taskimpl/: CMakeLists.txt
src/libs/plotter2/datter/tests/: CMakeLists.txt
src/libs/plotter2/datter/tests/include/: datasrc_csv_tests.hpp
src/libs/plotter2/datter/tests/resources/: csv1.csv
src/libs/plotter2/datter/tests/sources/: datasrc_csv_tests.cpp  datter_tests.cpp
src/libs/plotter2/grapher/: CMakeLists.txt
src/libs/plotter2/grapher/lib/: CMakeLists.txt
src/libs/plotter2/manager/: CMakeLists.txt
src/libs/plotter2/manager/lib/: CMakeLists.txt
src/libs/plotter2/manager/lib/include/: file_manager.hpp  head_manager.hpp  manager.hpp  manifest.hpp
src/libs/plotter2/manager/lib/sources/: file_manager.cpp  head_manager.cpp  manager.cpp  manifest.cpp
src/libs/plotter2/manager/tests/: CMakeLists.txt
src/libs/plotter2/manager/tests/include/: tests_manager.hpp  tests_manifest.hpp
src/libs/plotter2/manager/tests/resources/: test2.json
src/libs/plotter2/manager/tests/sources/: tests.cpp  tests_manager.cpp  tests_manifest.cpp
src/libs/plotter2/pipeline/: CMakeLists.txt
src/libs/plotter2/pipeline/lib/: CMakeLists.txt
src/libs/plotter2/pipeline/lib/include/: layer.hpp  node.hpp  pipeline.hpp
src/libs/plotter2/pipeline/lib/include/layertypes/: layerscript.hpp
src/libs/plotter2/pipeline/lib/sources/: layer.cpp  pipeline.cpp
src/libs/plotter2/scripter/lib/: CMakeLists.txt
src/libs/plotter2/shared/lib/: CMakeLists.txt
src/libs/plotter2/shared/lib/datter/include/: dataholder.hpp  datasrc.hpp  datasrc_csv.hpp  datasrc_json.hpp  datter.hpp
src/libs/plotter2/shared/lib/datter/sources/: dataholder.cpp  datasrc_csv.cpp  datasrc_json.cpp  datter.cpp
src/libs/plotter2/shared/lib/loggy/include/: loggy.hpp
src/libs/plotter2/shared/lib/loggy/sources/: loggy.cpp
src/libs/plotter2/shared/lib/plots/include/: plot.hpp  plotobject.hpp  plotscene.hpp
src/libs/plotter2/shared/lib/plots/sources/: plot.cpp  plotobject.cpp  plotscene.cpp
src/libs/plotter2/shared/lib/scripter/include/: dependency.hpp  exposed.hpp  scripter.hpp
src/libs/plotter2/shared/lib/scripter/sources/: scripter.cpp
src/libs/plotter2/shared/lib/utils/include/: dependency.hpp  fhold.hpp  fileholder.hpp  process_inspector.hpp  threadpool.hpp  utils.hpp  utils_fileholder.hpp  utils_threadworker.hpp
src/libs/plotter2/shared/lib/utils/sources/: dependency.cpp  fhold.cpp  fileholder.cpp  process_inspector.cpp  utils.cpp  utils_fileholder.cpp  utils_threadpool.cpp  utils_threadworker.cpp
src/libs/plotter2/shared/tests/: CMakeLists.txt
src/libs/plotter2/shared/tests/datter/: CMakeLists.txt
src/libs/plotter2/shared/tests/datter/include/: datasrc_csv_tests.hpp  datter_tests.hpp
src/libs/plotter2/shared/tests/datter/resources/: csv2.csv
src/libs/plotter2/shared/tests/datter/tests/: datasrc_csv_tests.cpp  datter_tests.cpp  tests.cpp
src/libs/plotter2/shared/tests/utils/: CMakeLists.txt
src/libs/plotter2/shared/tests/utils/include/: fhold_tests.hpp  process_inspector_tests.hpp  utils_tests.hpp
src/libs/plotter2/shared/tests/utils/tests/: fhold_tests.cpp  process_inspector_tests.cpp  tests.cpp  utils_cpp_tests.cpp
(+148 files in other folders)
